--- a/public/barbu.html
+++ b/public/barbu.html
@@ -12,6 +12,6 @@
     </head>
     <body>
         <div id="app"></div>
-        <script src="js/app.js"></script>
+        <script type="text/javascript" src="js/app.js"></script>
     </body>
 </html>
