--- a/public/barbu.html
+++ b/public/barbu.html
@@ -6,12 +6,14 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
     
         <link rel="icon" href="favicon.ico">
+        <link rel="stylesheet" type="text/css" href="css/domarrow.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.8.4/semantic.min.css" integrity="sha256-bsldvM021p5UCjvLS1wzZRXoL0B0bR5TpK1PxjWQpJY=" crossorigin="anonymous" />
     
         <title>barbu.js</title>
     </head>
     <body>
         <div id="app"></div>
+        <script type="text/javascript" src="js/domarrow.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
     </body>
 </html>
